--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@
       </div>
       <div class="d-flex icon-container2">
         <div>Download app</div>
-        <div class="ps-2"><img src="./blinkitclone/download (1).png" alt="App Store" width="92" height="30"
+        <div class="ps-2"><img src="./download (1).png" alt="App Store" width="92" height="30"
             loading="lazy" style="border-radius: 0px; object-fit: fill; cursor: default;"></div>
         <div class="ps-2"><img
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcx8sRXXQmSlzJSrNHCefb7yHRWl2BPBTuTA&usqp=CAU"
@@ -1021,7 +1021,7 @@
               d="M33.25 34.5C36.1495 34.5 38.5 32.1495 38.5 29.25C38.5 26.3505 36.1495 24 33.25 24C30.3505 24 28 26.3505 28 29.25C28 32.1495 30.3505 34.5 33.25 34.5Z"
               fill="white"></path>
           </svg></div>
-        <div class="ps-2"><img src="./blinkitclone/download.png" style="width: 40px; height: 40px; border-radius: 50%;">
+        <div class="ps-2"><img src="./download.png" style="width: 40px; height: 40px; border-radius: 50%;">
         </div>
 
       </div>
